Add eslint rule to allow children as a prop

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,9 @@
       "assignment": true,
       "return": true
     }],
+    "react/no-children-prop": ["enabled", {
+      "allowFunctions": true
+    }]
   },
   "plugins": [
     "react"
