update react/no-children-prop in eslint to be 1

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,7 +32,7 @@
       "assignment": true,
       "return": true
     }],
-    "react/no-children-prop": ["enabled", {
+    "react/no-children-prop": [1, {
       "allowFunctions": true
     }]
   },
