--- a/package.json
+++ b/package.json
@@ -20,19 +20,22 @@
     "analyze": "npm run build && source-map-explorer build/static/js/*.chunk.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "0.1.18",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
+    "@react-icons/all-files": "^4.1.0",
     "dayjs": "^1.11.3",
     "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
     "raw.macro": "^0.4.2",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-burger-menu": "^3.0.8",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
     "react-helmet-async": "^1.3.0",
+    "react-icons": "^4.7.1",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
